@@ -43,7 +43,7 @@ gboolean on_mainwindow_delete_event (GtkWidget * widget, GdkEvent * event,
             gpointer user_data);
 gboolean on_mainwindow_destroy_event (GtkWidget * widget, GdkEvent * event,
             gpointer user_data);
-void on_mainentry_activate (GtkEditable * editable, gpointer user_data);
+void on_mainentry_activate (GtkTextBuffer *buffer, gpointer user_data);
 gboolean on_mainwindow_key_press_event(GtkWidget *widget, GdkEventKey *event,
             gpointer user_data);
 gboolean double_click (GtkWidget *widget, GdkEventButton *event, 
