@@ -1,6 +1,8 @@
 Changelog for version xdx (1.3)
   * Polish translations by Boguslaw Ciastek SQ5TB, thanks!
   * Updated gettext and automake version used.
+  * The send widget is now a multiline text widget which allows entry of more
+    characters.
 
 Changelog for version xdx (1.2)
 
